# meowifylib

./: LICENSE  README.md  pyproject.toml
src/meowifylib/: __init__.py  eval.py  processing.py  run.py
src/meowifylib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
